# RaySR

./: .gitignore  README.md  fading_effect_test.ipynb  kladdkladdkladd.py  pyproject.toml  tx_valid_placement_test.ipynb
data_sample_mask_test/: map_and_mask_data_generation_test.ipynb  pre_comp_hm_w_less_samples_per_tx_test.py  pre_computet_height_map_test.py
data_sample_mask_test/test_less_sptx_and_md_w_pre_comp/etoile/: generation_log.txt
data_sample_mask_test/test_less_sptx_and_md_w_pre_comp/florence/: generation_log.txt
data_sample_mask_test/test_less_sptx_and_md_w_pre_comp/munich/: generation_log.txt
data_sample_mask_test/test_less_sptx_and_md_w_pre_comp/san_francisco/: generation_log.txt
data_sample_mask_test/test_sample_data_generation/etoile/: generation_log.txt
data_sample_mask_test/test_sample_data_generation/florence/: generation_log.txt
data_sample_mask_test/test_sample_data_generation/munich/: generation_log.txt
data_sample_mask_test/test_sample_data_generation/san_francisco/: generation_log.txt
src/experiments/: readme.md
src/experiments/simple_baseline/: builders.py  ex_data.ipynb  ex_resolution.ipynb  gen_data.ipynb  readme.md
src/experiments/simple_baseline/data/: etoile_super_resolution_dataset.pkl  radio_map_dataset_20pts.pkl
src/experiments/sionna_intro/: Ray-Tracing.ipynb  readme.md
src/poc/: generate_data.py  readme.md  speed_test.py  test.py  train.py  visualize.py
src/poc/configs/: config.yaml
src/poc/configs/data/: data_common.yaml  generator.yaml  radio_maps.yaml  rm_module.yaml  transmitter.yaml
src/poc/configs/model/: esrt.yaml  pan.yaml
src/poc/configs/test/: default.yaml  test.yaml
src/poc/data_modules/: builder.py  generator.py  helpers.py  rm_module.py
src/poc/models/: esrt.py  modeling_utils.py  pan.py
src/scene_experiments/: MyScene.py  scene_boundaries.ipynb  tx_placement_test.ipynb
tx_placement_tests/: 2_tx_pg_diffusion.py  height_map.py
(+2 files in other folders)
