[project]
name = "RaySR"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"  # Tensorflow 2.18.1 does not provide wheels for Python 3.13

authors = [
    { name = "Simon Wanna", email = "simonwanna@gmail.com" }
]

dependencies = [
    "ruff>=0.12.2",
    "pre-commit>=4.3.0",
    "sionna>=1.1.0",
    "matplotlib>=3.10.6",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "ANN001",  # missing type annotation for function argument
    "ANN201",  # missing return type annotation for public function
]

[tool.ruff]
exclude = ["src/experiments/*"]